#
# if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip and try again
#

TAG: pwi-6-0-26-12
DATE: 11/21/2025
STAFF: lec
wts2-1759/sprt-133/tiny tweaks to probes (help text) and strain (tabbing)
        modified:   pwi/static/app/edit/probe/help.html
        modified:   pwi/static/app/edit/strain/strain_content.html

TAG: pwi-6-0-26-11
DATE: 11/10/2025
STAFF: lec
wts2-1750/Nutanix Migration
change SERVER_PORT=5050
        modified:   Configuration.default

STAFF: lec
TAG: pwi-6-0-26-10
DATE: 10/30/2025
STAFF: lec
wts-1751/sprt-111/Lit Triage Module: line coloring off in Status Table

TAG: pwi-6-0-26-9
DATE: 10/24/2025
STAFF: lec
wts2-1743/sprt-94/Remove PRO lit triage workflow

TAG: pwi-6-0-26-8
TAG: pwi-6-0-26-7
TAG: pwi-6-0-26-6
DATE: 10/23/2025
STAFF: lec
wts2-1746/sprt-105/PWI EMAPA Browser: add count of HT samples
wts2-1748/sprt-106/PWI CL Browser: add count of HT samples
        modified:   pwi/static/app/edit/emapa/emapa_browser_content.html
        modified:   pwi/static/app/edit/celltype/celltype_browser_content.html

TAG: pwi-6-0-26-5
TAG: pwi-6-0-26-4
DATE: 10/16/2025
STAFF: lec
wts2-1743/sprt-94/Remove PRO lit triage workflow
        modified:   pwi/static/app/edit/triage/help.html
        modified:   pwi/static/app/edit/triage/lit_triage_content.html

TAG: pwi-6-0-26-3
DATE: 09/25/2025
STAFF: lec
wts2-1726/sprt-68/Marker Module Regulates Expression paste function not working
        modified:   pwi/static/app/edit/markerfear/MarkerFearController.js

TAG: pwi-6-0-26-2
DATE: 09/04/2025
STAFF: lec
wts2-1723/sprt-47/P-WI Add 2 notes to Notes picklist - GXD Index module
        modified:   pwi/static/app/edit/gxd/GxdIndexController.js

TAG: pwi-6-0-26-1
DATE: 07/28/2025
STAFF: lec
wts2-1707/e4g-320/GXD HT Index : Make the PubMed ID field in the GXD HT indexing module searchable
        modified:   pwi/static/app/edit/gxd/EvaluationController.js

TAG: pwi-6-0-25-7
DATE: 05/27/2025
STAFF: lec
wts2-1666/e4g-264/python 3.12 and cherryPy 18.10.0